boghanime_output.txt
cpp992$ g++ boghanime.cpp 
boghanime.cpp:34:15: warning: missing terminating ' character
   34 |         case 2':
      |               ^
boghanime.cpp:34:15: error: missing terminating ' character
   34 |         case 2':
      |               ^~
boghanime.cpp: In function ‘int main()’:
boghanime.cpp:34:15: error: expected ‘:’ before ‘search_c’
   34 |         case 2':
      |               ^
      |               :
   35 |             search_c();
      |             ~~~~~~~~
cpp992$ 

